# Remote_GPU_Virtualization_Tasks

./: README.md
Week1/Task1/: ds.h  linkedlist.h  queue.h  stack.h  week1_task1.cpp
Week1/Task2/: base_gate.h  nand_nor.h  not.h  or_and.h  week1_task2.cpp  xor_xnor.h
Week2/Task1/: CMakeLists.txt  bash_code.txt  client.cpp  helloworld.pb.h  server.cpp
Week2/Task2/: bash_code.txt  helloworld.pb.cc  server.cpp
Week2/Task3/: bash_code.txt  client.cpp  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto  server.cpp
